--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: brock
+name: homebrew|dot|quantifier|dot|org
 
 # Short bio or description (displayed in the header)
-description: homebrew|dot|quantifier|dot|org
+description: a member of the quantifier consortium
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://ih0.redbubble.net/image.824931632.9937/gbrf,6x6,f,245x245-pad,220x200,ffffff.u1.jpg
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: brock6/homebrew
+  github: brock6
   instagram:
   linkedin:
   pinterest:
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/homebrew"
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
